# SIFT

./: .gitmodules  CMakeLists.txt  README.md  SET_ENV.bat  SIFT.sln  helper_opencv.cpp  helper_opencv.h  helper_vigra.cpp  helper_vigra.h  main.cpp  vigra_sift.cpp  vigra_sift.h
CudaSift/: CudaSift.vcxproj  CudaSift.vcxproj.filters  README  cudaSiftD.cu  cudaSiftH.cu
MasterProjectPart1/: MasterProjectPart1.vcxproj
